--- a/halo/details.html
+++ b/halo/details.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/item.css">
     <link rel="stylesheet" href="css/details.css">
     <title>Máy ảnh 1DX Mark III </title>
   </head>
@@ -338,18 +339,22 @@
           <div class="recommend__wrapper">
             <div class="card item item--hot item--love item--sale"><img class="card-img-top" src="img/img--camera-body/canon-eos-5d-mark-iv-card.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
               <div class="card-body text-center">
-                <p class="item__name font-weight-bold font-18">Canon EOS 5D Mark IV</p>
-                <p class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</p>
-                <p class="card-text price font-weight-bold">50.090.000đ</p>
-                <div class="card-text sale-text font-weight-bold"><span class="old-price">58.090.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 8.000.000đ)</span></div><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
+                <div class="item__header">
+                  <p class="item__name font-weight-bold font-18">Canon EOS 5D Mark IV</p>
+                  <p class="item__subtext font-italic font-weight-light">(Mới 100% fullbox)</p>
+                </div>
+                <p class="item__price font-weight-bold">50.090.000đ</p>
+                <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">58.090.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 8.000.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết </a>
               </div>
             </div>
-            <div class="card item item--hot item--love"><img class="card-img-top" src="img/img--item/item-2.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
+            <div class="card item item--hot item--sale"><img class="card-img-top" src="img/img--item/item-2.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
               <div class="card-body text-center">
-                <p class="item__name font-weight-bold font-18">Fujifilm X-E3 Silver</p>
-                <p class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</p>
-                <p class="card-text price font-weight-bold">10.290.000đ</p>
-                <div class="card-text sale-text font-weight-bold"><span class="old-price">17.490.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 7.200.000đ)</span></div><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
+                <div class="item__header">
+                  <p class="item__name font-weight-bold">Fujifilm X-E3 Silver</p>
+                  <p class="item__subtext font-italic font-weight-light">(Mới 100% fullbox)</p>
+                </div>
+                <p class="item__price font-weight-bold">10.290.000đ</p>
+                <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">17.490.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 7.200.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết </a>
               </div>
             </div>
           </div>
