--- a/halo/dslr-hub.html
+++ b/halo/dslr-hub.html
@@ -11,6 +11,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/dslr-hub.css">
+    <link rel="stylesheet" href="css/item.css">
     <title>Máy ảnh DSLR</title>
   </head>
   <body>
@@ -177,74 +178,92 @@
           <div class="main-area__items-area">
             <div class="card item item--hot item--love item--sale"><img class="card-img-top" src="img/img--camera-body/canon-eos-5d-mark-iv-card.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
               <div class="card-body text-center">
-                <p class="item__name font-weight-bold font-18">Canon EOS 5D Mark IV</p>
-                <p class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</p>
-                <p class="card-text price font-weight-bold">50.090.000đ</p>
-                <div class="card-text sale-text font-weight-bold"><span class="old-price">58.090.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 8.000.000đ)</span></div><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
+                <div class="item__header">
+                  <p class="item__name font-weight-bold font-18">Canon EOS 5D Mark IV</p>
+                  <p class="item__subtext font-italic font-weight-light">(Mới 100% fullbox)</p>
+                </div>
+                <p class="item__price font-weight-bold">50.090.000đ</p>
+                <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">58.090.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 8.000.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết </a>
               </div>
             </div>
-            <div class="card item item--hot item--love"><img class="card-img-top" src="img/img--item/item-2.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
+            <div class="card item item--hot item--sale"><img class="card-img-top" src="img/img--item/item-2.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
               <div class="card-body text-center">
-                <p class="item__name font-weight-bold font-18">Fujifilm X-E3 Silver</p>
-                <p class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</p>
-                <p class="card-text price font-weight-bold">10.290.000đ</p>
-                <div class="card-text sale-text font-weight-bold"><span class="old-price">17.490.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 7.200.000đ)</span></div><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
+                <div class="item__header">
+                  <p class="item__name font-weight-bold">Fujifilm X-E3 Silver</p>
+                  <p class="item__subtext font-italic font-weight-light">(Mới 100% fullbox)</p>
+                </div>
+                <p class="item__price font-weight-bold">10.290.000đ</p>
+                <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">17.490.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 7.200.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết </a>
               </div>
             </div>
-            <div class="card item item--hot item--sale"><img class="card-img-top" src="img/img--item/item-3.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
+            <div class="card item item--sale"><img class="card-img-top" src="img/img--item/item-3.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
               <div class="card-body text-center">
-                <p class="item__name font-weight-bold font-18">Sony Alpha A7 Mark II</p>
-                <p class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</p>
-                <p class="card-text price font-weight-bold">23.990.000đ</p>
-                <div class="card-text sale-text font-weight-bold"><span class="old-price">26.990.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 3.000.000đ)</span></div><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
+                <div class="item__header">
+                  <p class="item__name font-weight-bold">Sony Alpha A7 Mark II</p>
+                  <p class="item__subtext font-italic font-weight-light">(Mới 100% fullbox)</p>
+                </div>
+                <p class="item__price font-weight-bold">23.990.000đ</p>
+                <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">26.990.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 3.000.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết  </a>
               </div>
             </div>
-            <div class="card item item--hot"><img class="card-img-top" src="img/img--item/item-4.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
+            <div class="card item item--hot item--love"><img class="card-img-top" src="img/img--item/item-4.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
               <div class="card-body text-center">
-                <p class="item__name font-weight-bold font-18">Nikon D7500</p>
-                <p class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</p>
-                <p class="card-text price font-weight-bold">17.990.000đ</p>
-                <div class="card-text sale-text font-weight-bold"><span class="old-price">22.990.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 5.000.000đ)</span></div><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
+                <div class="item__header">
+                  <p class="item__name font-weight-bold">Nikon D7500</p>
+                  <p class="item__subtext font-italic font-weight-light">(Mới 100% fullbox)</p>
+                </div>
+                <p class="item__price font-weight-bold">17.990.000đ</p>
+                <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">22.990.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 5.000.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết  </a>
               </div>
             </div>
             <div class="card item"><img class="card-img-top" src="img/img--item/item-5.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
               <div class="card-body text-center">
-                <p class="item__name font-weight-bold font-18">Canon 1DX Mark III</p>
-                <p class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</p>
-                <p class="card-text price font-weight-bold">130.090.000đ</p>
-                <div class="card-text sale-text font-weight-bold"><span class="old-price">138.090.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 8.000.000đ)</span></div><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
+                <div class="item__header">
+                  <p class="item__name font-weight-bold">Canon 1DX Mark III</p>
+                  <p class="item__subtext font-italic font-weight-light">(Mới 100% fullbox)</p>
+                </div>
+                <p class="item__price font-weight-bold">130.090.000đ</p>
+                <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">138.090.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 8.000.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết  </a>
               </div>
             </div>
             <div class="card item item--hot item--love item--sale"><img class="card-img-top" src="img/img--camera-body/canon-eos-5d-mark-iv-card.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
               <div class="card-body text-center">
-                <p class="item__name font-weight-bold font-18">Canon EOS 5D Mark IV</p>
-                <p class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</p>
-                <p class="card-text price font-weight-bold">50.090.000đ</p>
-                <div class="card-text sale-text font-weight-bold"><span class="old-price">58.090.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 8.000.000đ)</span></div><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
+                <div class="item__header">
+                  <p class="item__name font-weight-bold font-18">Canon EOS 5D Mark IV</p>
+                  <p class="item__subtext font-italic font-weight-light">(Mới 100% fullbox)</p>
+                </div>
+                <p class="item__price font-weight-bold">50.090.000đ</p>
+                <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">58.090.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 8.000.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết </a>
               </div>
             </div>
-            <div class="card item item--hot item--love"><img class="card-img-top" src="img/img--item/item-2.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
+            <div class="card item item--hot item--sale"><img class="card-img-top" src="img/img--item/item-2.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
               <div class="card-body text-center">
-                <p class="item__name font-weight-bold font-18">Fujifilm X-E3 Silver</p>
-                <p class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</p>
-                <p class="card-text price font-weight-bold">10.290.000đ</p>
-                <div class="card-text sale-text font-weight-bold"><span class="old-price">17.490.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 7.200.000đ)</span></div><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
+                <div class="item__header">
+                  <p class="item__name font-weight-bold">Fujifilm X-E3 Silver</p>
+                  <p class="item__subtext font-italic font-weight-light">(Mới 100% fullbox)</p>
+                </div>
+                <p class="item__price font-weight-bold">10.290.000đ</p>
+                <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">17.490.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 7.200.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết </a>
               </div>
             </div>
-            <div class="card item item--hot item--sale"><img class="card-img-top" src="img/img--item/item-3.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
+            <div class="card item item--sale"><img class="card-img-top" src="img/img--item/item-3.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
               <div class="card-body text-center">
-                <p class="item__name font-weight-bold font-18">Sony Alpha A7 Mark II</p>
-                <p class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</p>
-                <p class="card-text price font-weight-bold">23.990.000đ</p>
-                <div class="card-text sale-text font-weight-bold"><span class="old-price">26.990.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 3.000.000đ)</span></div><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
+                <div class="item__header">
+                  <p class="item__name font-weight-bold">Sony Alpha A7 Mark II</p>
+                  <p class="item__subtext font-italic font-weight-light">(Mới 100% fullbox)</p>
+                </div>
+                <p class="item__price font-weight-bold">23.990.000đ</p>
+                <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">26.990.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 3.000.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết  </a>
               </div>
             </div>
-            <div class="card item item--hot"><img class="card-img-top" src="img/img--item/item-4.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
+            <div class="card item item--hot item--love"><img class="card-img-top" src="img/img--item/item-4.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
               <div class="card-body text-center">
-                <p class="item__name font-weight-bold font-18">Nikon D7500</p>
-                <p class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</p>
-                <p class="card-text price font-weight-bold">17.990.000đ</p>
-                <div class="card-text sale-text font-weight-bold"><span class="old-price">22.990.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 5.000.000đ)</span></div><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
+                <div class="item__header">
+                  <p class="item__name font-weight-bold">Nikon D7500</p>
+                  <p class="item__subtext font-italic font-weight-light">(Mới 100% fullbox)</p>
+                </div>
+                <p class="item__price font-weight-bold">17.990.000đ</p>
+                <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">22.990.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 5.000.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết  </a>
               </div>
             </div>
           </div>
@@ -274,6 +293,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"> </script>
     <script src="js/script.js"></script>
   </body>
 </html>
