--- a/halo/details.html
+++ b/halo/details.html
@@ -57,32 +57,40 @@
               <p class="w-100 font-18 text-center font-weight-bold reg">Đăng ký</p>
             </div>
             <div class="modal-body px-4 d-flex flex-column align-items-center">
-              <form class="logreg--login-form w-100" action="" role="form">
-                <div class="input-group w-100">
+              <form class="logreg__form w-100" action="" role="form">
+                <div class="input-group w-100 log required">
                   <div class="input-group-prepend"><span class="input-group-text"><i class="far fa-user-circle"></i></span></div>
-                  <input class="form-control login-form--username" type="text" placeholder="Email">
+                  <input class="form-control log__input--mail" type="text" placeholder="Email">
                 </div>
-                <div class="input-group w-100">
+                <div class="input-group w-100 log">
                   <div class="input-group-prepend"><span class="input-group-text"><i class="fas fa-lock"></i></span></div>
-                  <input class="form-control login-form--password" type="text" placeholder="Mật khẩu">
+                  <input class="form-control log__input--password" type="text" placeholder="Mật khẩu">
+                </div>
+                <div class="input-group w-100 reg required">
+                  <div class="input-group-prepend"><span class="input-group-text"><i class="far fa-user-circle"></i></span></div>
+                  <input class="form-control reg__input--mail" type="text" placeholder="Email">
+                </div>
+                <div class="input-group w-100 reg">
+                  <div class="input-group-prepend"><span class="input-group-text"><i class="fas fa-lock"></i></span></div>
+                  <input class="form-control reg__input--password" type="text" placeholder="Mật khẩu">
                 </div>
                 <div class="input-group w-100 reg">
                   <div class="input-group-prepend"><span class="input-group-text"><i class="far fa-address-card"></i></span></div>
-                  <input class="form-control login-form--password" type="text" placeholder="Họ tên">
+                  <input class="form-control reg__input--name" type="text" placeholder="Họ tên">
                 </div>
                 <div class="input-group w-100 reg">
                   <div class="input-group-prepend"><span class="input-group-text"><i class="fas fa-phone"></i></span></div>
-                  <input class="form-control login-form--password" type="text" placeholder="Số điện thoại">
+                  <input class="form-control reg__input--phone" type="text" placeholder="Số điện thoại">
                 </div>
               </form><a class="forget align-self-end log" href="#">Quên mật khẩu?</a>
               <p class="forget align-self-start font-11 font-italic reg">Khi đăng ký, bạn xác nhận đã đọc và đồng ý với <a style="color: #007bff" href="#">các điều khoản của chúng tôi</a></p>
-              <button class="btn logreg__submit btn--dark log">Đăng nhập</button>
-              <button class="btn logreg__submit btn--dark font-14 reg">Gia nhập cộng đồng HALO</button>
+              <button class="btn logreg__submit logreg__submit--log btn--dark log">Đăng nhập</button>
+              <button class="btn logreg__submit logreg__submit--reg btn--dark reg">Gia nhập cộng đồng HALO</button>
               <p class="log">Hoặc đăng nhập với </p>
               <div class="logreg__platform justify-content-between log"><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-fb.png" alt="halo thế giới máy ảnh"></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-gg.png" alt="halo thế giới máy ảnh"></a><a class="platform__link" href="#"><img class="platform__img" src="img/img--misc/logo-apple.png" alt="halo thế giới máy ảnh"></a></div>
             </div>
-            <div class="modal-footer"><a class="logreg-portal mx-auto reg" onclick="logregSwitch()">Quay lại đăng nhập</a>
-              <p class="mx-auto log">Chưa có tài khoản? <a class="logreg-portal" onclick="logregSwitch()">Đăng ký ngay </a></p>
+            <div class="modal-footer">
+              <p class="mx-auto log">Chưa có tài khoản? <span class="logreg-portal logreg-portal--to-reg">Đăng ký ngay</span></p><span class="logreg-portal logreg-portal--to-log mx-auto reg">Quay lại đăng nhập</span>
             </div>
           </div>
         </div>
